# conformvault-sdk-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VERSION.md  pyproject.toml
.github/workflows/: ci.yml
conformvault/: __init__.py  activity_subscriptions.py  attestation.py  audit.py  bandwidth.py  batches.py  bulk.py  client.py  comments.py  data_export.py  errors.py  files.py  folders.py  jobs.py  keys.py  legal_holds.py  metadata.py  permissions.py  policies.py  quota.py  retention.py  scan_reports.py  search.py  sharelinks.py  signatures.py  templates.py  transactions.py  trash.py  types.py  upload_sessions.py  versions.py  webhooks.py
examples/: quickstart.py
security-scan/2026-03-04_675e589/: scan-report.md
security-scan/2026-03-04_8a9f904/: scan-report.md
security-scan/2026-03-07_a1f0ec0/: scan-report.md
tests/: test_client.py  test_types.py  test_webhook_verify.py
